--- a/catkin/src/noisey/package.xml
+++ b/catkin/src/noisey/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>ekf</name>
+  <name>noisey</name>
   <version>0.0.0</version>
-  <description>The ekf package</description>
+  <description>The noisey package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/ekf</url> -->
+  <!-- <url type="website">http://wiki.ros.org/noisey</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
@@ -42,7 +42,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
-<build_depend>stdr_msgs</build_depend>
+  <build_depend>stdr_msgs</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>stdr_msgs</run_depend>
