--- a/catkin/src/motion/CMakeLists.txt
+++ b/catkin/src/motion/CMakeLists.txt
@@ -2,10 +2,11 @@ cmake_minimum_required(VERSION 2.8.3)
 project(motion)
 
 find_package(catkin REQUIRED COMPONENTS
+  roscpp
   geometry_msgs
   nav_msgs
-  roscpp
   std_msgs
+  
 )
 
 
@@ -26,9 +27,15 @@ include_directories(
 
 ## Declare a cpp executable
  add_executable(simple_movement src/simple_movement.cpp)
+ add_executable(laser_sweep src/laser_sweep.cpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(simple_movement
+   ${catkin_LIBRARIES}
+)
+
+
+target_link_libraries(laser_sweep
    ${catkin_LIBRARIES}
 )
 
