what the hell is happening

--- a/catkin/src/filters/CMakeLists.txt
+++ b/catkin/src/filters/CMakeLists.txt
@@ -26,6 +26,8 @@ include_directories(
 
 ## Declare a cpp executable
 add_executable(vel_model src/vel_model.cpp)
+add_executable(sense_model src/sense_model.cpp)
+add_executable(scan_queue src/scan_queue.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
@@ -33,5 +35,13 @@ add_executable(vel_model src/vel_model.cpp)
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(vel_model
+   ${catkin_LIBRARIES}
+)
+
+target_link_libraries(sense_model
+   ${catkin_LIBRARIES}
+)
+
+target_link_libraries(scan_queue
    ${catkin_LIBRARIES}
 )
